@@ -47,7 +47,7 @@ public class PigQueryServer {
 	 * @throws Exception
 	 */
 	public static void start() throws Exception {
-		ExecutorService executors = Executors.newFixedThreadPool(10);
+		ExecutorService executors = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors(), Thread.ofVirtual().factory());
 		serverSocket = new ServerSocket(Integer.valueOf(DataSamudayaProperties.get()
 				.getProperty(DataSamudayaConstants.PIGPORT, DataSamudayaConstants.PIGPORT_DEFAULT)));
 		queryParserDriver = PigUtils.getQueryParserDriver("pig");
